# koto

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
src/: app.rs  main.rs
src/domain/: todo.rs
src/repo/: memory.rs  mod.rs  sqlite.rs
src/repo/github/: auth.rs  mod.rs  model.rs  timeutil.rs
src/ui/: mod.rs
src/usecase/: attention.rs
